--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -113,7 +113,7 @@
     updateHeader();
 
     // --- Flip Timing ---
-    const beiboraDuration = 180000; // 3 minutes
+    const beiboraDuration = 60000; // 1 minute
     const bannerDuration = 10000;   // 10 seconds
     let showingBanner = false;
     let flipTimer;
@@ -163,3 +163,4 @@
 
 </body>
 </html>
+
