--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -100,7 +100,7 @@
     updateHeader();
 
     // --- Flip Timing ---
-    const pharmaDuration = 60000; // 1 minute
+    const pharmaDuration = 20000; // 20 seconds
     const bannerDuration = 10000;  // 10 seconds
     let showingBanner = false;
 
