--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Pharma Dashboard Flip</title>
+  <title>Pharma_Dashboard_Flip</title>
   <style>
     html, body {
       margin: 0;
@@ -85,14 +85,21 @@
     // ⏰ Live updating clock
     function updateHeader() {
       const now = new Date();
-      const formattedTime = now.toLocaleString('en-GB', {
+      const formattedDate = now.toLocaleString('en-GB', {
         day: '2-digit',
-        month: 'short',
+        month: 'long', // Full month name
         year: 'numeric',
         hour: '2-digit',
         minute: '2-digit',
         second: '2-digit'
       }).replace(',', '');
+
+      // Make the month uppercase
+      const formattedTime = formattedDate.replace(
+        /\b([A-Za-z]+)\b/,
+        (match) => match.toUpperCase()
+      );
+
       overlayTitle.textContent = `PHARMA TELESALES PERFORMANCE AS AT ${formattedTime} | # OPERATION NIGHT HAMMER`;
     }
 
