--- a/Pharma_Beibora_Flip.html
+++ b/Pharma_Beibora_Flip.html
@@ -11,10 +11,9 @@
       overflow: hidden;
       background: black;
       font-family: Arial, sans-serif;
-      perspective: 1500px; /* Adds depth for 3D rotation */
+      perspective: 1500px;
     }
 
-    /* Shared 3D flip base style */
     .flippable {
       position: absolute;
       top: 0;
@@ -36,9 +35,11 @@
 
     iframe {
       border: none;
+      width: 100%;
+      height: 100%;
+      background: black;
     }
 
-    /* Overlay (acts like a dashboard too) */
     #imageOverlay {
       display: flex;
       flex-direction: column;
@@ -49,7 +50,6 @@
       color: white;
     }
 
-    /* Banner header */
     #imageOverlay header {
       position: absolute;
       top: 0;
@@ -66,7 +66,6 @@
       border-bottom: 2px solid #00ffcc;
     }
 
-    /* Banner image */
     #imageOverlay img {
       position: absolute;
       top: 0;
@@ -85,19 +84,10 @@
     }
   </style>
 
-  <!-- 🔒 Password Protection (Remembers until Fully restarts) -->
+  <!-- 🔒 Password Protection (Active until browser or kiosk closes) -->
   <script>
     const correctPassword = "PharmaBeibora@2025"; // <-- your password
-    const authData = JSON.parse(localStorage.getItem("authenticated_pb_data"));
-
-    const now = Date.now();
-    const maxSessionAge = 24 * 60 * 60 * 1000; // 24 hours validity
-
-    let authenticated = false;
-
-    if (authData && authData.timestamp && (now - authData.timestamp < maxSessionAge)) {
-      authenticated = true; // still valid
-    }
+    const authenticated = sessionStorage.getItem("auth_pharma_beibora");
 
     if (!authenticated) {
       const password = prompt("Enter password to access Pharma/Beibora Dashboard:");
@@ -106,7 +96,7 @@
         window.location.href = "about:blank";
         throw new Error("Unauthorized access");
       } else {
-        localStorage.setItem("authenticated_pb_data", JSON.stringify({ timestamp: now }));
+        sessionStorage.setItem("auth_pharma_beibora", "true"); // valid until browser/kiosk closes
       }
     }
   </script>
@@ -123,28 +113,26 @@
   </div>
 
   <script>
-    // Dashboards (Pharma & Beibora)
     const dashboards = [
-      { url: "Pharma_Telesales_Statistics.html", duration: 120000 },
-      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }
+      { url: "Pharma_Telesales_Statistics.html", duration: 120000 }, // 2 mins
+      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }  // 1 min
     ];
 
-    // Elements
     const frame = document.getElementById("dashboardFrame");
     const overlay = document.getElementById("imageOverlay");
     const overlayTitle = document.getElementById("overlayTitle");
 
-    let index = 0; // Start with Pharma
+    let index = 0;
     let showingBanner = false;
     let rotationTimer;
     let timeUpdater;
 
-    // Format time nicely
+    // Format time display
     function getFormattedTime() {
       const now = new Date();
       return now.toLocaleString('en-GB', {
         day: '2-digit',
-        month: 'short',
+        month: 'long',
         year: 'numeric',
         hour: '2-digit',
         minute: '2-digit',
@@ -165,7 +153,7 @@
       frame.src = dashboards[i].url + "?v=" + new Date().getTime();
     }
 
-    // Flip between dashboard and banner
+    // Flip transition between dashboard and banner
     function flipTransition(showBannerNext) {
       frame.classList.remove("active");
       overlay.classList.remove("active");
@@ -182,13 +170,13 @@
       }, 1000);
     }
 
-    // Control the rotation flow
+    // Control rotation cycle
     function rotate() {
       if (!showingBanner) {
         flipTransition(true);
         showingBanner = true;
         clearTimeout(rotationTimer);
-        rotationTimer = setTimeout(rotate, 10000);
+        rotationTimer = setTimeout(rotate, 10000); // Banner duration
       } else {
         flipTransition(false);
         showingBanner = false;
@@ -197,7 +185,7 @@
       }
     }
 
-    // --- INITIALIZATION ---
+    // Initialize
     loadDashboard(index);
     frame.classList.add("active");
     rotationTimer = setTimeout(rotate, dashboards[index].duration);
