--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -56,23 +56,151 @@
       border-bottom: 2px solid #00ffcc;
       z-index: 3;
     }
+
+    /* ===== Password Modal Styles ===== */
+    .pw-modal-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.85);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+
+    .pw-modal {
+      background: linear-gradient(180deg, #041616 0%, #003735 100%);
+      padding: 24px;
+      border-radius: 12px;
+      width: 380px;
+      max-width: calc(100% - 32px);
+      box-shadow: 0 8px 40px rgba(0, 0, 0, 0.8);
+      color: #00ffd1;
+      text-align: center;
+      border: 2px solid rgba(0, 255, 204, 0.08);
+      font-family: Arial, sans-serif;
+    }
+
+    .pw-modal h2 {
+      margin: 0 0 12px 0;
+      font-size: 1.1rem;
+      letter-spacing: 0.6px;
+    }
+
+    .pw-modal p {
+      margin: 0 0 16px 0;
+      font-size: 0.9rem;
+      opacity: 0.85;
+    }
+
+    .pw-input {
+      width: 100%;
+      box-sizing: border-box;
+      padding: 10px 12px;
+      font-size: 1rem;
+      border-radius: 6px;
+      border: 1px solid rgba(0, 255, 204, 0.12);
+      background: rgba(255, 255, 255, 0.02);
+      color: #e6fff9;
+      outline: none;
+      margin-bottom: 12px;
+    }
+
+    .pw-actions {
+      display: flex;
+      gap: 8px;
+      justify-content: center;
+    }
+
+    .pw-btn {
+      padding: 8px 14px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 0.95rem;
+      background: rgba(0, 255, 204, 0.08);
+      color: #00ffd1;
+      transition: transform 0.08s ease;
+    }
+
+    .pw-btn:active { transform: translateY(1px); }
+    .pw-btn.cancel { background: rgba(255, 80, 80, 0.08); color: #ff8a8a; }
+
+    .pw-error {
+      color: #ff8080;
+      font-size: 0.9rem;
+      height: 1.1rem;
+      margin-top: 8px;
+      opacity: 0.95;
+    }
   </style>
 
-  <!-- 🔒 Password Protection (Resets when browser closes) -->
+  <!-- 🔒 Password Protection (Hidden input version) -->
   <script>
     const correctPassword = "Pharma@2025"; // change password here
-    const authenticated = sessionStorage.getItem("auth_pharma");
+    const storageKey = "auth_pharma";
 
-    if (!authenticated) {
-      const password = prompt("Enter password to access Pharma Dashboard:");
-      if (password !== correctPassword) {
-        alert("Incorrect password. Access denied.");
-        window.location.href = "about:blank";
-        throw new Error("Unauthorized access");
-      } else {
-        sessionStorage.setItem("auth_pharma", "true"); // valid until Chrome/Fully closes
-      }
+    function createPasswordModal(onSuccess, onCancel) {
+      const overlay = document.createElement("div");
+      overlay.className = "pw-modal-overlay";
+      overlay.innerHTML = `
+        <div class="pw-modal">
+          <h2>Enter password to access Pharma Dashboard</h2>
+          <p>Your input is hidden for privacy.</p>
+          <input id="pwInput" class="pw-input" type="password" placeholder="Password" />
+          <div class="pw-actions">
+            <button id="pwSubmit" class="pw-btn">Enter</button>
+            <button id="pwCancel" class="pw-btn cancel">Cancel</button>
+          </div>
+          <div id="pwError" class="pw-error"></div>
+        </div>
+      `;
+      document.body.appendChild(overlay);
+
+      const input = document.getElementById("pwInput");
+      const submit = document.getElementById("pwSubmit");
+      const cancel = document.getElementById("pwCancel");
+      const error = document.getElementById("pwError");
+
+      input.focus();
+
+      submit.onclick = () => {
+        if (input.value === correctPassword) {
+          sessionStorage.setItem(storageKey, "true");
+          overlay.remove();
+          onSuccess && onSuccess();
+        } else {
+          error.textContent = "Incorrect password. Try again.";
+          input.value = "";
+          input.focus();
+        }
+      };
+
+      cancel.onclick = () => {
+        overlay.remove();
+        onCancel && onCancel();
+      };
+
+      input.addEventListener("keydown", (e) => {
+        if (e.key === "Enter") submit.click();
+        if (e.key === "Escape") cancel.click();
+      });
     }
+
+    (function checkAuth() {
+      const authenticated = sessionStorage.getItem(storageKey);
+      if (!authenticated) {
+        createPasswordModal(
+          () => {},
+          () => {
+            alert("Access denied.");
+            window.location.href = "about:blank";
+            throw new Error("Unauthorized access");
+          }
+        );
+      }
+    })();
   </script>
 </head>
 
@@ -103,14 +231,14 @@
     // ⏰ Live updating clock
     function updateHeader() {
       const now = new Date();
-      const formattedDate = now.toLocaleString('en-GB', {
-        day: '2-digit',
-        month: 'long',
-        year: 'numeric',
-        hour: '2-digit',
-        minute: '2-digit',
-        second: '2-digit'
-      }).replace(',', '');
+      const formattedDate = now.toLocaleString("en-GB", {
+        day: "2-digit",
+        month: "long",
+        year: "numeric",
+        hour: "2-digit",
+        minute: "2-digit",
+        second: "2-digit"
+      }).replace(",", "");
 
       const formattedTime = formattedDate.replace(
         /\b([A-Za-z]+)\b/,
@@ -133,19 +261,19 @@
         bannerScreen.classList.remove("active");
         pharmaScreen.classList.add("active");
         showingBanner = false;
-        localStorage.setItem('lastFlip_pharma', Date.now());
+        localStorage.setItem("lastFlip_pharma", Date.now());
         setTimeout(switchScreens, pharmaDuration);
       } else {
         pharmaScreen.classList.remove("active");
         bannerScreen.classList.add("active");
         showingBanner = true;
-        localStorage.setItem('lastFlip_pharma', Date.now());
+        localStorage.setItem("lastFlip_pharma", Date.now());
         setTimeout(switchScreens, bannerDuration);
       }
     }
 
     // --- Persist current phase across refresh ---
-    const lastFlip = localStorage.getItem('lastFlip_pharma');
+    const lastFlip = localStorage.getItem("lastFlip_pharma");
     if (lastFlip) {
       const elapsed = Date.now() - lastFlip;
       const totalCycle = pharmaDuration + bannerDuration;
@@ -166,7 +294,7 @@
       pharmaScreen.classList.add("active");
       bannerScreen.classList.remove("active");
       showingBanner = false;
-      localStorage.setItem('lastFlip_pharma', Date.now());
+      localStorage.setItem("lastFlip_pharma", Date.now());
       setTimeout(switchScreens, pharmaDuration);
     }
   </script>
