--- a/Pharma_Beibora_Flip.html
+++ b/Pharma_Beibora_Flip.html
@@ -82,21 +82,76 @@
       from { transform: scale(1); }
       to { transform: scale(1.05); }
     }
+
+    /* 🔐 Secure password overlay styling */
+    #passwordOverlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.95);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: #00ffcc;
+      font-family: Arial, sans-serif;
+      z-index: 9999;
+    }
+
+    #passwordOverlay input {
+      padding: 10px;
+      font-size: 1em;
+      border-radius: 8px;
+      border: 2px solid #00ffcc;
+      outline: none;
+      background: black;
+      color: #00ffcc;
+      text-align: center;
+      margin-top: 10px;
+      width: 250px;
+    }
+
+    #passwordOverlay button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      background: #00ffcc;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      color: black;
+      font-weight: bold;
+    }
+
+    #passwordOverlay button:hover {
+      background: #00cca3;
+    }
   </style>
 
-  <!-- 🔒 Password Protection (Active until browser or kiosk closes) -->
+  <!-- 🔒 Hidden Password Input (Session-based Authentication) -->
   <script>
-    const correctPassword = "PharmaBeibora@2025"; // <-- your password
+    const correctPassword = "PharmaBeibora@2025";
     const authenticated = sessionStorage.getItem("auth_pharma_beibora");
 
     if (!authenticated) {
-      const password = prompt("Enter password to access Pharma/Beibora Dashboard:");
-      if (password !== correctPassword) {
-        alert("Incorrect password. Access denied.");
-        window.location.href = "about:blank";
-        throw new Error("Unauthorized access");
-      } else {
-        sessionStorage.setItem("auth_pharma_beibora", "true"); // valid until browser/kiosk closes
+      document.write(`
+        <div id="passwordOverlay">
+          <h2>🔒 Enter Password to Access Pharma/Beibora Dashboard</h2>
+          <input type="password" id="passwordInput" placeholder="Enter password" autofocus>
+          <button onclick="verifyPassword()">Unlock</button>
+        </div>
+      `);
+
+      function verifyPassword() {
+        const password = document.getElementById("passwordInput").value;
+        if (password === correctPassword) {
+          sessionStorage.setItem("auth_pharma_beibora", "true");
+          document.getElementById("passwordOverlay").remove();
+        } else {
+          alert("Incorrect password. Access denied.");
+          window.location.href = "about:blank";
+        }
       }
     }
   </script>
